use sw renderer, font issue and why not column widths